--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "graphql_course",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
+    "dev":"concurrently \"nodemon app.js\" \"cd client & npm run dev\"",
     "test": "jest"
   },
   "keywords": [],
@@ -13,15 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.5",
+    "concurrently": "^8.2.0",
     "graphql": "^16.7.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-babel": "^1.0.1",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
 }
